// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden frames > renders a busy dock at 40 columns 1`] = `
[
  "◎ goal round 6/256 · complete the plan …",
  "⏸ plan mode · answer the plan before ed…",
  "⚇ subagents · 1 running, 1 done",
  "  ▸ c000cfa3 · spawn · running 4s",
  "  ✓ f05abce2 · fork · completed 2s",
  "⛭ jobs · 1 running, 0 done",
  "  ▸ bash-1 · running 12s — sleep 45 && …",
  "☰ todos 1/2 done",
  "  ▸ verify the dock",
  "  ☑ write the dock",
]
`;

exports[`golden frames > renders a busy dock at 80 columns 1`] = `
[
  "◎ goal round 6/256 · complete the plan for this dsh-tui plugin",
  "⏸ plan mode · answer the plan before edits happen",
  "⚇ subagents · 1 running, 1 done",
  "  ▸ c000cfa3 · spawn · running 4s",
  "  ✓ f05abce2 · fork · completed 2s",
  "⛭ jobs · 1 running, 0 done",
  "  ▸ bash-1 · running 12s — sleep 45 && echo bg-done",
  "☰ todos 1/2 done",
  "  ▸ verify the dock",
  "  ☑ write the dock",
]
`;

exports[`golden frames > renders the dock at 40 columns 1`] = `
[
  "⏸ plan mode · answer the plan before ed…",
  "☰ todos 1/3 done",
  "  ▸ verify the dock",
  "  ☐ document the dock",
  "  ☑ write the dock",
]
`;

exports[`golden frames > renders the dock at 80 columns 1`] = `
[
  "⏸ plan mode · answer the plan before edits happen",
  "☰ todos 1/3 done",
  "  ▸ verify the dock",
  "  ☐ document the dock",
  "  ☑ write the dock",
]
`;

exports[`golden frames > renders the session picker at 40 columns 1`] = `
{
  "above": 0,
  "below": 0,
  "filter": "",
  "hint": "↑↓ move · enter open · esc cancel · type to filter",
  "note": undefined,
  "rows": [
    {
      "current": true,
      "description": "/Users/dev/source/opensource/deepseek-harness/master · 4m ago · 22 events",
      "label": "dock polish",
    },
    {
      "current": false,
      "description": "/Users/dev/source/opensource/deepseek-harness/master · 15m ago · 41 events",
      "label": "tui-session-f38b6841-9229-4c2f-8c82-0ced1eee68ea",
    },
  ],
  "title": "resume a session · 2 stored",
}
`;

exports[`golden frames > renders the session picker at 80 columns 1`] = `
{
  "above": 0,
  "below": 0,
  "filter": "",
  "hint": "↑↓ move · enter open · esc cancel · type to filter",
  "note": undefined,
  "rows": [
    {
      "current": true,
      "description": "/Users/dev/source/opensource/deepseek-harness/master · 4m ago · 22 events",
      "label": "dock polish",
    },
    {
      "current": false,
      "description": "/Users/dev/source/opensource/deepseek-harness/master · 15m ago · 41 events",
      "label": "tui-session-f38b6841-9229-4c2f-8c82-0ced1eee68ea",
    },
  ],
  "title": "resume a session · 2 stored",
}
`;

exports[`golden frames > renders the status row at 40 columns 1`] = `
[
  "● ready · standard · zai-coding-cn/glm-…",
]
`;

exports[`golden frames > renders the status row at 80 columns 1`] = `
[
  "● ready · standard · zai-coding-cn/glm-5.3 (max) · workspace-write · ctx 17.5k/…",
]
`;

exports[`golden frames > renders the transcript at 40 columns 1`] = `
[
  "add a dock above the editor",
  "injected dsh-agent-instructions · 3",
  "lines — <system-reminder>",
  "reasoning · 14 tokens",
  "    the dock needs the fold",
  "    and the fold needs the events",
  "Done.",
  "",
  "- fold the work state",
  "- render it only when it says something",
  "",
  "\`\`\`ts",
  "  const dock = new WorkDock(state,",
  "theme)",
  "\`\`\`",
  "Run pnpm test",
  "    Tests  154 passed (154)",
  "    exit 0",
  "Read src/ui/view.ts",
  "compacted 3 events (≈4200 tokens)",
]
`;

exports[`golden frames > renders the transcript at 80 columns 1`] = `
[
  "add a dock above the editor",
  "injected dsh-agent-instructions · 3 lines — <system-reminder>",
  "reasoning · 14 tokens",
  "    the dock needs the fold",
  "    and the fold needs the events",
  "Done.",
  "",
  "- fold the work state",
  "- render it only when it says something",
  "",
  "\`\`\`ts",
  "  const dock = new WorkDock(state, theme)",
  "\`\`\`",
  "Run pnpm test",
  "    Tests  154 passed (154)",
  "    exit 0",
  "Read src/ui/view.ts",
  "compacted 3 events (≈4200 tokens)",
]
`;

exports[`styled golden frames > renders the busy dock with its escapes 1`] = `
[
  "[1m◎ goal round 6/256 · complete the plan for this dsh-tui plugin[0m",
  "[1m⏸ plan mode · answer the plan before edits happen[0m",
  "[1m⚇ subagents · 1 running, 1 done[0m",
  "[38;2;138;138;138m  ▸ c000cfa3 · spawn · running 4s[0m",
  "[38;2;138;138;138m  ✓ f05abce2 · fork · completed 2s[0m",
  "[1m⛭ jobs · 1 running, 0 done[0m",
  "[38;2;138;138;138m  ▸ bash-1 · running 12s — sleep 45 && echo bg-done[0m",
  "[1m☰ todos 1/2 done[0m",
  "[38;2;138;138;138m  ▸ verify the dock[0m",
  "[38;2;138;138;138m  ☑ write the dock[0m",
]
`;

exports[`styled golden frames > renders the status row with its escapes 1`] = `
[
  "[38;2;138;138;138m● ready[0m[38;2;138;138;138m · [0m[38;2;138;138;138mstandard[0m[38;2;138;138;138m · [0m[38;2;138;138;138mzai-coding-cn/glm-5.3[0m[38;2;138;138;138m (max)[0m[38;2;138;138;138m · [0m[38;2;138;138;138mworkspace-write[0m[38;2;138;138;138m · [0m[38;2;138;138;138mctx 17.5k/[0m…[0m[0m",
]
`;

exports[`styled golden frames > renders the transcript with its escapes 1`] = `
[
  "[1;38;2;208;208;208madd a dock above the editor[0m",
  "[38;2;138;138;138minjected dsh-agent-instructions · 3 lines — <system-reminder>[0m",
  "[38;2;138;138;138mreasoning · 14 tokens[0m",
  "[38;2;138;138;138m    the dock needs the fold[0m",
  "[38;2;138;138;138m    and the fold needs the events[0m",
  "Done.",
  "",
  "[38;2;95;175;215m- [0mfold the work state",
  "[38;2;95;175;215m- [0mrender it only when it says something",
  "",
  "[38;2;138;138;138m\`\`\`ts[0m",
  "  const dock = new WorkDock(state, theme)",
  "[38;2;138;138;138m\`\`\`[0m",
  "[38;2;215;175;95mRun pnpm test[0m",
  "    [38;2;138;138;138mTests  154 passed (154)[0m",
  "    [38;2;138;138;138mexit 0[0m",
  "[38;2;215;175;95mRead src/ui/view.ts[0m",
  "[38;2;138;138;138mcompacted 3 events (≈4200 tokens)[0m",
]
`;
